# costGuardBE

./: .env  .env.example  README.md  alembic.ini  costguard.db  pyproject.toml
alembic/: env.py
alembic/versions/: 20231203_0001_create_items_table.py  20231203_0002_core_tables.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: invoices.py  items.py
app/core/: config.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  anomaly.py  enums.py  invoice.py  item.py  user.py  vendor.py
app/schemas/: __init__.py  anomaly.py  invoice.py  item.py
app/services/: file_storage.py  invoice_extractor.py  vendor_normalizer.py
costguard_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: check_db.py
tests/: test_create_invoice.py  test_db_connection.py
